--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
   <head>
     <title>Главная страница</title>
-    <link href="F:\myderect\VinsentRou.github.io\Index.css" rel="stylesheet" type="text/css">
+    <link href="VinsentRou.github.io/Index.css" rel="stylesheet" type="text/css">
   </head>
 
   <body>
