--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <a href="file:///F:/myderect/M_reg/M_reg.html">Медицинский регистратор</a>
       <a href="file:///F:/myderect/Doctor/Doctor.html">Врач</a>
       <a href="file:///F:/myderect/M_ses/M_ses.html">Медицинская сестра</a>
-      <a href="file:///F:/myderect/Dio/Dio.html">Диагностические отделения</a>
+      <a href="https://vinsentrou.github.io/Dio/Dio.html">Диагностические отделения</a>
     </nav>
     <h1>Сайт технической поддержки КГБУЗ «Красноярской межрайонной клинической больницы №20 им. И.С.Берзона» по МИС qMS</h1>
     <p>
