--- a/Dio/Dio.html
+++ b/Dio/Dio.html
@@ -2,7 +2,7 @@
 
   <head>
     <title>Диагностические отделения</title>
-    <link href="file:///F:/myderect/Index.css" rel="stylesheet" type="text/css">
+    <link href="/Index.css" rel="stylesheet" type="text/css">
   </head>
 
   <body>
@@ -10,7 +10,7 @@
       <p><a href="file:///F:/myderect/M_reg/M_reg.html">Медицинский регистратор</a></p>
       <p><a href="file:///F:/myderect/Doctor/Doctor.html">Врач</a></p>
       <p><a href="file:///F:/myderect/M_ses/M_ses.html">Медицинская сестра</a></p>
-      <p><a href="file:///F:/myderect/Dio/Dio.html">Диагностические отделения</a></p>
+      <p><a href="/Dio/Dio.html">Диагностические отделения</a></p>
     </nav>
     <h1>Работа диагностических отделений в МИС qMS</h1>
     <p>
