--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 
   <head>
     <title>Главная страница</title>
-    <link href="Index.css" rel="stylesheet" type="text/css">
+    <link href="/CSS/Index.css" rel="stylesheet" type="text/css">
   </head>
 
   <body>
     <nav>
       <a href="file:///F:/myderect/M_reg/M_reg.html">Медицинский регистратор</a>
-      <a href="file:///F:/myderect/Doctor/Doctor.html">Врач</a>
+      <a href="/Doctor/Doctor.html">Врач</a>
       <a href="file:///F:/myderect/M_ses/M_ses.html">Медицинская сестра</a>
       <a href="/Dio/Dio.html">Диагностические отделения</a>
     </nav>
