--- a/Dio/Dio.html
+++ b/Dio/Dio.html
@@ -2,13 +2,13 @@
 
   <head>
     <title>Диагностические отделения</title>
-    <link href="/Index.css" rel="stylesheet" type="text/css">
+    <link href="/CSS/Index.css" rel="stylesheet" type="text/css">
   </head>
 
   <body>
     <nav>
       <p><a href="file:///F:/myderect/M_reg/M_reg.html">Медицинский регистратор</a></p>
-      <p><a href="file:///F:/myderect/Doctor/Doctor.html">Врач</a></p>
+      <p><a href="/Doctor/Doctor.html">Врач</a></p>
       <p><a href="file:///F:/myderect/M_ses/M_ses.html">Медицинская сестра</a></p>
       <p><a href="/Dio/Dio.html">Диагностические отделения</a></p>
     </nav>
