--- a/Dio/Dio.html
+++ b/Dio/Dio.html
@@ -7,9 +7,9 @@
 
   <body>
     <nav>
-      <p><a href="file:///F:/myderect/M_reg/M_reg.html">Медицинский регистратор</a></p>
+      <p><a href="/M_reg/M_reg.html">Медицинский регистратор</a></p>
       <p><a href="/Doctor/Doctor.html">Врач</a></p>
-      <p><a href="file:///F:/myderect/M_ses/M_ses.html">Медицинская сестра</a></p>
+      <p><a href="/M_ses/M_ses.html">Медицинская сестра</a></p>
       <p><a href="/Dio/Dio.html">Диагностические отделения</a></p>
     </nav>
     <h1>Работа диагностических отделений в МИС qMS</h1>
@@ -24,11 +24,11 @@
       Особенности заполнения исследований в МИС qMS подразделяются по видам:
       </p>
       <ul>
-      <li><a href="file:///F:/myderect/Dio/Lab.html">Лабораторные</a></li>
-      <li><a href="file:///F:/myderect/Dio/Pentgen.html">Рентген</a></li>
-      <li><a href="file:///F:/myderect/Dio/UZD.html">Ультразвуковые</a></li>
-      <li><a href="file:///F:/myderect/Dio/Endo.html">Эндоскопические</a></li>
-      <li><a href="file:///F:/myderect/Dio/F_dio.html">Функциональная диогностика</a></li>
+      <li><a href="/hole/hole.html">Лабораторные</a></li>
+      <li><a href="/hole/hole.html">Рентген</a></li>
+      <li><a href="/hole/hole.html">Ультразвуковые</a></li>
+      <li><a href="/hole/hole.html">Эндоскопические</a></li>
+      <li><a href="/hole/hole.html">Функциональная диогностика</a></li>
       </ul>
     </div>
     <footer>
