--- a/M_reg/M_reg.html
+++ b/M_reg/M_reg.html
@@ -2,15 +2,15 @@
 
   <head>
     <title>Медицинский регистратор</title>
-    <link href="file:///F:/myderect/Index.css" rel="stylesheet" type="text/css">
+    <link href="/CSS/Index.css" rel="stylesheet" type="text/css">
   </head>
 
   <body>
     <nav>
-      <p><a href="file:///F:/myderect/M_reg/M_reg.html">Медицинский регистратор</a></p>
-      <p><a href="file:///F:/myderect/Doctor/Doctor.html">Врач</a></p>
-      <p><a href="file:///F:/myderect/M_ses/M_ses.html">Медицинская сестра</a></p>
-      <p><a href="file:///F:/myderect/Dio/Dio.html">Диагностические отделения</a></p>
+      <p><a href="/M_reg/M_reg.html">Медицинский регистратор</a></p>
+      <p><a href="/Doctor/Doctor.html">Врач</a></p>
+      <p><a href="/M_ses/M_ses.html">Медицинская сестра</a></p>
+      <p><a href="/Dio/Dio.html">Диагностические отделения</a></p>
     </nav>
     <h1>Работа медицинского регистратора в МИС qMS</h1>
     <p>
@@ -21,12 +21,12 @@
         Медицинский регистратор в МИС qMS является первым звеном в процессе оказания медицинской помощи и заполнения медицинской документации. В своей работе ему необходимо:
       </p>
       <ul>
-      <li><a href="file:///F:/myderect/M_reg/P_i_s.html">Найти</a> медицинскую карту пациента в базе МИС qMS или создать новую</li>
-      <li><a href="file:///F:/myderect/M_reg/P_i_s.html">Завести новую историю болезни</a></li>
-      <li>Проверить и дополнить <a href="file:///F:/myderect/M_reg/Info.html">персональные данные</a> пациента</li>
-      <li><a href="file:///F:/myderect/M_reg/Reg.html">Зарегистрировать</a> пациента в зависимости от вида оказания медицинской помощи: амбулаторно, стационарно, включая дневной стационар, акушерство или уход</li>
-      <li><a href="file:///F:/myderect/M_reg/Pep_doc.html">Оформить бумажную документацию</a></li>
-      <li><a href="file:///F:/myderect/M_reg/Naz.html">Назначить</a> осмотр врачом приёмного покоя</li>
+      <li><a href="/hole/hole.html">Найти</a> медицинскую карту пациента в базе МИС qMS или создать новую</li>
+      <li><a href="/hole/hole.html">Завести новую историю болезни</a></li>
+      <li>Проверить и дополнить <a href="/hole/hole.html">персональные данные</a> пациента</li>
+      <li><a href="/hole/hole.html">Зарегистрировать</a> пациента в зависимости от вида оказания медицинской помощи: амбулаторно, стационарно, включая дневной стационар, акушерство или уход</li>
+      <li><a href="/hole/hole.html">Оформить бумажную документацию</a></li>
+      <li><a href="/hole/hole.html">Назначить</a> осмотр врачом приёмного покоя</li>
       </ul>
     </div>
     <footer>
