--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 
   <body>
     <nav>
-      <a href="file:///F:/myderect/M_reg/M_reg.html">Медицинский регистратор</a>
+      <a href="/M_reg/M_reg.html">Медицинский регистратор</a>
       <a href="/Doctor/Doctor.html">Врач</a>
-      <a href="file:///F:/myderect/M_ses/M_ses.html">Медицинская сестра</a>
+      <a href="/M_ses/M_ses.html">Медицинская сестра</a>
       <a href="/Dio/Dio.html">Диагностические отделения</a>
     </nav>
     <h1>Сайт технической поддержки КГБУЗ «Красноярской межрайонной клинической больницы №20 им. И.С.Берзона» по МИС qMS</h1>
@@ -24,10 +24,10 @@
         Для продолжения работы выберете интересующий Вас раздел:
       </p>
       <div>
-        <a class="R-menu" href="file:///F:/myderect/M_reg/M_reg.html">Медицинские регистраторы</a>
-        <a class="R-menu" href="file:///F:/myderect/Doctor/Doctor.html">Врачи</a>
-        <a class="R-menu" href="file:///F:/myderect/M_ses/M_ses.html">Медицинские сестры</a>
-       <a class="R-menu" href="file:///F:/myderect/Dio/Dio.html">Диагностические отделения</a>
+        <a class="R-menu" href="/M_reg/M_reg.html">Медицинские регистраторы</a>
+        <a class="R-menu" href="/Doctor/Doctor.html">Врачи</a>
+        <a class="R-menu" href="/M_ses/M_ses.html">Медицинские сестры</a>
+       <a class="R-menu" href="/Dio/Dio.html">Диагностические отделения</a>
       </div>
     </div>
     <footer>
