--- a/Doctor/Doctor.html
+++ b/Doctor/Doctor.html
@@ -2,15 +2,15 @@
 
   <head>
     <title>Врач</title>
-    <link href="file:///F:/myderect/Index.css" rel="stylesheet" type="text/css">
+    <link href="/CSS/Index.css" rel="stylesheet" type="text/css">
   </head>
 
   <body>
     <nav>
-      <p><a href="file:///F:/myderect/M_reg/M_reg.html">Медицинский регистратор</a></p>
-      <p><a href="file:///F:/myderect/Doctor/Doctor.html">Врач</a></p>
-      <p><a href="file:///F:/myderect/M_ses/M_ses.html">Медицинская сестра</a></p>
-      <p><a href="file:///F:/myderect/Dio/Dio.html">Диагностические отделения</a></p>
+      <p><a href="/M_reg/M_reg.html">Медицинский регистратор</a></p>
+      <p><a href="/Doctor/Doctor.html">Врач</a></p>
+      <p><a href="/M_ses/M_ses.html">Медицинская сестра</a></p>
+      <p><a href="/Dio/Dio.html">Диагностические отделения</a></p>
     </nav>
     <h1>Работа врача в МИС qMS</h1>
     <p>
@@ -21,10 +21,10 @@
         Врачи в МИС qMS вносят основную часть истории болезни в виде осмотров и кураций, делают назначение на лечебные и диагностические процедуры, оформляют переводы в другие отделения больницы, выписки из стационара, этапные, выписные и посмертные эпикризы. А так же выполняют часть лечебных процедур. Список таких процедур представлен ниже.
       </p>
       <p>
-        <strong id="NB">ВАЖНО!</strong> Данный раздел сайта предназначен только для врачей приемного покоя, отделений и консультантов. Специалистам диагностического профиля рекомендовано обратится в раздел <a href="file:///F:/myderect/Dio/Dio.html">«Диагностические отделения»</a>
+        <strong id="NB">ВАЖНО!</strong> Данный раздел сайта предназначен только для врачей приемного покоя, отделений и консультантов. Специалистам диагностического профиля рекомендовано обратится в раздел <a href="/Dio/Dio.html">«Диагностические отделения»</a>
       </p>
       <div>
-      <p>Врачей в МИС qMS можно разделить на <a href="file:///F:/myderect/Doctor/L_Doc/L_Doc.html">лечащих врачей</a>, <a href="file:///F:/myderect/Doctor/P_Doc/P_Doc.html">врачей приемного покоя</a> и <a href="file:///F:/myderect/Doctor/K_Doc/K_Doc.html">врачей консультантов.</a></p>
+      <p>Врачей в МИС qMS можно разделить на <a href="/hole/hole.html">лечащих врачей</a>, <a href="/hole/hole.html">врачей приемного покоя</a> и <a href="/hole/hole.html">врачей консультантов.</a></p>
       </div>
     </div>
     <footer>
