--- a/M_ses/M_ses.html
+++ b/M_ses/M_ses.html
@@ -2,15 +2,15 @@
 
   <head>
     <title>Медицинская сестра</title>
-    <link href="file:///F:/myderect/Index.css" rel="stylesheet" type="text/css">
+    <link href="/CSS/Index.css" rel="stylesheet" type="text/css">
   </head>
 
   <body>
     <nav>
-      <p><a href="file:///F:/myderect/M_reg/M_reg.html">Медицинский регистратор</a></p>
-      <p><a href="file:///F:/myderect/Doctor/Doctor.html">Врач</a></p>
-      <p><a href="file:///F:/myderect/M_ses/M_ses.html">Медицинская сестра</a></p>
-      <p><a href="file:///F:/myderect/Dio/Dio.html">Диагностические отделения</a></p>
+      <p><a href="/M_reg/M_reg.html">Медицинский регистратор</a></p>
+      <p><a href="/Doctor/Doctor.html">Врач</a></p>
+      <p><a href="/M_ses/M_ses.html">Медицинская сестра</a></p>
+      <p><a href="/Dio/Dio.html">Диагностические отделения</a></p>
     </nav>
     <h1>Работа медицинской сестры в МИС qMS</h1>
     <p>
@@ -23,13 +23,13 @@
         В работе с МИС qMS медицинские сестры:
       </p>
       <ul>
-      <li>Оформляют <a href="file:///F:/myderect/M_ses/Poc_v_otd.html">поступление пациента в отделение</a></li>
-        <li>Укладывают <a href="file:///F:/myderect/M_ses/Poc_v_otd.html">пациента на койку</a></li>
-        <li>Заполняют <a href="file:///F:/myderect/M_ses/Osmotr_MS.html">ежедневные осмотры</a></li>
-        <li><a href="file:///F:/myderect/M_ses/L_proc.html">Выполняют лечебные процедуры</a></li>
-        <li><a href="file:///F:/myderect/M_ses/Lec_ter.html">Выполняют лекарственную терапию</a></li>
-        <li>Формируют <a href="file:///F:/myderect/M_ses/Por_treb.html">порционное требование</a> по диетпитанию</li>
-        <li>Формируют отчетную <a href="file:///F:/myderect/M_ses/F7-u.html">форму 7/у</a></li>
+      <li>Оформляют <a href="/hole/hole.html">поступление пациента в отделение</a></li>
+        <li>Укладывают <a href="/hole/hole.html">пациента на койку</a></li>
+        <li>Заполняют <a href="/hole/hole.html">ежедневные осмотры</a></li>
+        <li><a href="/hole/hole.html">Выполняют лечебные процедуры</a></li>
+        <li><a href="/hole/hole.html">Выполняют лекарственную терапию</a></li>
+        <li>Формируют <a href="/hole/hole.html">порционное требование</a> по диетпитанию</li>
+        <li>Формируют отчетную <a href="/hole/hole.html">форму 7/у</a></li>
       </ul>
     </div>
     <footer>
