--- a/hole/hole.html
+++ b/hole/hole.html
@@ -2,22 +2,22 @@
 
   <head>
     <title>Раздел в разработке</title>
-    <link href="file:///F:/myderect/Index.css" rel="stylesheet" type="text/css">
+    <link href="/CSS/Index.css" rel="stylesheet" type="text/css">
   </head>
 
   <body>
     <nav>
-      <p><a href="file:///F:/myderect/M_reg/M_reg.html">Медицинский регистратор</a></p>
-      <p><a href="file:///F:/myderect/Doctor/Doctor.html">Врач</a></p>
-      <p><a href="file:///F:/myderect/M_ses/M_ses.html">Медицинская сестра</a></p>
-      <p><a href="file:///F:/myderect/Dio/Dio.html">Диагностические отделения</a></p>
+      <p><a href="/M_reg/M_reg.html">Медицинский регистратор</a></p>
+      <p><a href="/Doctor/Doctor.html">Врач</a></p>
+      <p><a href="/M_ses/M_ses.html">Медицинская сестра</a></p>
+      <p><a href="/Dio/Dio.html">Диагностические отделения</a></p>
     </nav>
     <div>
       <h1 class="hole">
         Данный раздел сайта находится в разработке
       </h1>
       <p class="hole">
-        <a href="file:///F:/myderect/Index.html">
+        <a href="https://vinsentrou.github.io">
           Вернутся на главную
         </a>
       </p>
