--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 
   <body>
     <nav>
-      <a href="/M_reg/M_reg.html">Медицинский регистратор</a>
-      <a href="/Doctor/Doctor.html">Врач</a>
-      <a href="/M_ses/M_ses.html">Медицинская сестра</a>
-      <a href="/Dio/Dio.html">Диагностические отделения</a>
+      <p><a href="/M_reg/M_reg.html">Медицинский регистратор</a></p>
+      <p><a href="/Doctor/Doctor.html">Врач</a></p>
+      <p><a href="/M_ses/M_ses.html">Медицинская сестра</a></p>
+      <p><a href="/Dio/Dio.html">Диагностические отделения</a></p>
     </nav>
     <h1>Сайт технической поддержки КГБУЗ «Красноярской межрайонной клинической больницы №20 им. И.С.Берзона» по МИС qMS</h1>
     <p>
