--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <p><a href="/M_ses/M_ses.html">Медицинская сестра</a></p>
       <p><a href="/Dio/Dio.html">Диагностические отделения</a></p>
     </nav>
-    <h1><img alt="Logo" src="/Pic/Logo.png">Сайт технической поддержки КГБУЗ «Красноярской межрайонной клинической больницы №20 им. И.С.Берзона» по МИС qMS</h1>
+    <h1>Сайт технической поддержки КГБУЗ «Красноярской межрайонной клинической больницы №20 им. И.С.Берзона» по МИС qMS</h1>
     <p>
       <strong class="NB">Данный сайт не является официальным сайтом КГБУЗ «КМКБ №20 им. И.С. Берзона» и предназначен исключительно для технической поддержки специалистов в работе с МИС qMS.</strong>
     </p>
