--- a/Doctor/Doctor.html
+++ b/Doctor/Doctor.html
@@ -1,7 +1,11 @@
+<!DOCTYPE html>
 <html>
 
   <head>
     <title>Врач</title>
+	<meta name="description"content="страница технической поддержки врачей 20-й Больницы">
+	<meta name="keywords" content="qMS, КГБУЗ КМКБ №20 им. И.С. Берзона», Больница №20, инструкции, врач">
+	<meta http-equiv="author" content="Шереметьев Алексей">
     <link href="/CSS/Index.css" rel="stylesheet" type="text/css">
   </head>
 
@@ -21,7 +25,7 @@
         Врачи в МИС qMS вносят основную часть истории болезни в виде осмотров и кураций, делают назначение на лечебные и диагностические процедуры, оформляют переводы в другие отделения больницы, выписки из стационара, этапные, выписные и посмертные эпикризы. А так же выполняют часть лечебных процедур. Список таких процедур представлен ниже.
       </p>
       <p>
-        <strong id="NB">ВАЖНО!</strong> Данный раздел сайта предназначен только для врачей приемного покоя, отделений и консультантов. Специалистам диагностического профиля рекомендовано обратится в раздел <a href="/Dio/Dio.html">«Диагностические отделения»</a>
+        <span id="NB">ВАЖНО!</span> Данный раздел сайта предназначен только для врачей приемного покоя, отделений и консультантов. Специалистам диагностического профиля рекомендовано обратится в раздел <a href="/Dio/Dio.html">«Диагностические отделения»</a>
       </p>
       <div>
       <p>Врачей в МИС qMS можно разделить на <a href="/hole/hole.html">лечащих врачей</a>, <a href="/hole/hole.html">врачей приемного покоя</a> и <a href="/hole/hole.html">врачей консультантов.</a></p>
