--- a/M_reg/M_reg.html
+++ b/M_reg/M_reg.html
@@ -1,7 +1,11 @@
+<!DOCTYPE html>
 <html>
 
   <head>
     <title>Медицинский регистратор</title>
+	<meta name="description"content="страница технической поддержки медицинских регистраторов 20-й Больницы">
+	<meta name="keywords" content="qMS, КГБУЗ КМКБ №20 им. И.С. Берзона», Больница №20, инструкции, регистратор">
+	<meta http-equiv="author" content="Шереметьев Алексей">
     <link href="/CSS/Index.css" rel="stylesheet" type="text/css">
   </head>
 
