--- a/M_ses/M_ses.html
+++ b/M_ses/M_ses.html
@@ -1,7 +1,11 @@
+<!DOCTYPE html>
 <html>
 
   <head>
     <title>Медицинская сестра</title>
+	<meta name="description"content="страница технической поддержки медицинских сестрер 20-й Больницы">
+	<meta name="keywords" content="qMS, КГБУЗ КМКБ №20 им. И.С. Берзона, Больница №20, инструкции, мед. сестры">
+	<meta http-equiv="author" content="Шереметьев Алексей">
     <link href="/CSS/Index.css" rel="stylesheet" type="text/css">
   </head>
 
