--- a/hole/hole.html
+++ b/hole/hole.html
@@ -1,7 +1,10 @@
+<!DOCTYPE html>
 <html>
 
   <head>
     <title>Раздел в разработке</title>
+	<meta name="description"content="раздел в разработке">
+	<meta http-equiv="author" content="Шереметьев Алексей">
     <link href="/CSS/Index.css" rel="stylesheet" type="text/css">
   </head>
 
