--- a/Dio/Dio.html
+++ b/Dio/Dio.html
@@ -1,7 +1,11 @@
+<!DOCTYPE html>
 <html>
 
   <head>
     <title>Диагностические отделения</title>
+	<meta name="description"content="страница технической поддержки диагностических отделений 20-й Больницы">
+	<meta name="keywords" content="qMS, КГБУЗ КМКБ №20 им. И.С. Берзона», Больница №20, инструкции, диагностика">
+	<meta http-equiv="author" content="Шереметьев Алексей">
     <link href="/CSS/Index.css" rel="stylesheet" type="text/css">
   </head>
 
