--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
+<!DOCTYPE html>
 <html>
 
   <head>
     <title>Главная страница</title>
+	<meta name="description"content="Сайт технической поддержки 20-й Больницы">
+	<meta name="keywords" content="qMS, КГБУЗ КМКБ №20 им. И.С. Берзона», Больница №20, инструкции">
+	<meta http-equiv="author" content="Шереметьев Алексей">
     <link href="/CSS/Index.css" rel="stylesheet" type="text/css">
   </head>
 
