--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </p>
     <div class="content">
       <p>
-        Оформление всех медицинских историй на территории 20-й Больнице ведется посредствам внесения информации в медицинскую информационную систему qMS (МИС qMS). Данный ресурс предназначен помочь специалистам в решении проблем возникающих в работе с МИС qMS.
+        Оформление всех медицинских историй на территории 20-й Больницы ведется посредством внесения информации в медицинскую информационную систему qMS (МИС qMS). Данный ресурс предназначен помочь специалистам в решении проблем возникающих в работе с МИС qMS.
       </p>
       <p>
         Для продолжения работы выберете интересующий Вас раздел:
